--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "site/themes/themes/jane"]
-	path = site/themes/themes/jane
+[submodule "site/themes/jane"]
+	path = site/themes/jane
 	url = https://github.com/xianmin/hugo-theme-jane.git
